--- a/pengingat-tugas-vue/package.json
+++ b/pengingat-tugas-vue/package.json
@@ -11,15 +11,22 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@dafcoe/vue-collapsible-panel": "^0.2.0",
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
     "@fortawesome/free-brands-svg-icons": "^6.5.1",
     "@fortawesome/free-regular-svg-icons": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/vue-fontawesome": "^3.0.6",
+    "@fullcalendar/core": "^6.1.11",
+    "@fullcalendar/daygrid": "^6.1.11",
+    "@fullcalendar/interaction": "^6.1.11",
+    "@fullcalendar/vue3": "^6.1.11",
     "@vuepic/vue-datepicker": "^8.1.1",
     "axios": "^1.6.5",
+    "chart.js": "^3.0.0",
     "js-cookie": "^3.0.5",
     "pinia": "^2.1.7",
+    "preline": "^2.0.3",
     "vue": "^3.3.11",
     "vue-router": "^4.2.5",
     "vue-toastification": "^2.0.0-rc.5",
