--- a/pengingat-tugas-vue/package.json
+++ b/pengingat-tugas-vue/package.json
@@ -26,10 +26,10 @@
     "chart.js": "^3.0.0",
     "firebase": "^10.11.0",
     "js-cookie": "^3.0.5",
+    "laravel-vue-pagination": "^4.1.3",
     "pinia": "^2.1.7",
     "preline": "^2.0.3",
     "vue": "^3.3.11",
-    "vue-awesome-paginate": "^1.1.46",
     "vue-router": "^4.2.5",
     "vue-toastification": "^2.0.0-rc.5",
     "vuex": "^4.1.0"
